# scrapdf

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scrapdf/: exceptions.py
scrapdf/extraction/: interfaces.py  pdf_chars.py  text.py
tests/extraction/: test_text.py
